<resources>
    <string name="app_name">Login Screen</string>
    <string name="login_text">Login to your account</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="image">image</string>
    <string name="logout">Logout</string>
    <string name="it_worked">It worked</string>
</resources>